--- a/original/package.json
+++ b/original/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "iview": "^3.3.3",
     "jsonp": "^0.2.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
