--- a/original/package.json
+++ b/original/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "iview": "^3.3.3",
     "jsonp": "^0.2.1",
