--- a/original/.babelrc
+++ b/original/.babelrc
@@ -8,9 +8,10 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
-  // "plugins": [["import", {
-  //   "libraryName": "iview",
-  //   "libraryDirectory": "src/components"
-  // }]]
+  // "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "plugins": ["transform-vue-jsx", "transform-runtime",["import", {
+    "libraryName": "iview",
+    "libraryDirectory": "src/components"
+  }]]
 }
+
